# Gallifreyan

./: .gitignore  Cargo.toml  README.md  index.html  script.js  style.css
src/: conversion.rs  draw_number.rs  draw_sentence.rs  draw_shape.rs  draw_word.rs  lib.rs  main.rs  shape.rs  tree.rs
webpage/: script.js  style.css
webpage/pkg/: LICENSE  gallifreyan.d.ts  gallifreyan.js  gallifreyan_bg.wasm  gallifreyan_bg.wasm.d.ts  package.json
