[package]
name = "gallifreyan"
version = "0.1.0"
edition = "2024"
authors = ["David Tomlinson"]
description = "Convert strings to Sherman's Gallifreyan"
license = "MIT"
repository = "https://github.com/D-G-Tomlinson/Gallifreyan"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
